--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,16 +2,13 @@ name: Check-Build
 
 on: [push]
 
-env:
-  KINECTSDK20_DIR: D:\Microsoft SDKs\Kinect\v2.0_1409\
-
 jobs:
   build:
 
     runs-on: windows-latest
     strategy:
       matrix:
-        dotnet-version: ['7.0.x' ]
+        dotnet-version: ['10.0.x' ]
 
     steps:
       - uses: actions/checkout@v3
@@ -20,29 +17,15 @@ jobs:
 
       - uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: '7.0.x'
+          dotnet-version: '10.0.x'
           
-      - name: Add MSYS64 bin to PATH
-        run: echo "C:\msys64\usr\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
-
-      - name: Install Kinect SDK20
-        shell: powershell
-        run: |
-          New-Item -ItemType directory KinectSDK-v2.0 | Out-Null
-          wget "https://download.microsoft.com/download/F/2/D/F2D1012E-3BC6-49C5-B8B3-5ACFF58AF7B8/KinectSDK-v2.0_1409-Setup.exe" -OutFile KinectSDK-v2.0-Setup.exe
-          & "C:\Program Files (x86)\WiX Toolset v3.14\bin\dark.exe" KinectSDK-v2.0-Setup.exe -x KinectSDK-v2.0
-          Start-Process msiexec -ArgumentList "/a ${{ github.workspace }}\KinectSDK-v2.0\AttachedContainer\KinectSDK-v2.0_1409-x64.msi /passive /qn" -Wait -NoNewWindow
-          
-      - name: Add MSBuild to PATH
-        uses: microsoft/setup-msbuild@v1.1
-
       - name: Restore and build (publish)
-        run: msbuild plugin_KinectOne /restore /p:Platform=x64 /p:PlatformTarget=x64 /p:Configuration=Release /p:RuntimeIdentifier=win-x64 /t:Publish /p:PublishProfile=plugin_KinectOne\Properties\PublishProfiles\FolderProfile.pubxml
-        
+        run: dotnet publish /p:Configuration=Release /p:TargetFramework=net8.0 /p:PublishProfile=FolderProfile
+      
       - name: Pack published files
         run: |
-          cd plugin_KinectOne/bin/Release/Publish
-          7z a plugin_KinectOne.zip *
+          cd plugin_Kinect360NiTE/bin/Release/Publish
+          7z a plugin_Kinect360NiTE.zip *
         
       - name: Upload plugin artifact
         uses: "marvinpinto/action-automatic-releases@latest"
@@ -50,7 +33,7 @@ jobs:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           automatic_release_tag: "latest"
           prerelease: true
-          title: "plugin_KinectOne Build Artifact"
+          title: "plugin_Kinect360NiTE Build Artifact"
           files: |
-            ./plugin_KinectOne/bin/Release/Publish/plugin_KinectOne.zip
+            ./plugin_Kinect360NiTE/bin/Release/Publish/plugin_Kinect360NiTE.zip
             ./external/manifest.json
