--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
+          submodules: true
           lfs: 'true'
 
       - uses: actions/setup-dotnet@v3
