--- a/plugin_Kinect360NiTE/plugin_Kinect360NiTE.csproj
+++ b/plugin_Kinect360NiTE/plugin_Kinect360NiTE.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Amethyst.Contract" Version="2.0.0" />
     <PackageReference Include="Avalonia" Version="11.3.2" />
     <PackageReference Include="Avalonia.Labs.Controls" Version="11.3.1" />
     <PackageReference Include="NiWrapper.Net" Version="2.2.0.14" />
@@ -26,11 +27,5 @@
   <ItemGroup>
     <Content Include="Assets\Runtime\**" CopyToOutputDirectory="PreserveNewest" CopyToPublishDirectory="PreserveNewest"
              Link="%(RecursiveDir)\%(Filename)%(Extension)" Visible="False" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="Amethyst.Contract">
-      <HintPath>..\..\..\Amethyst.Contract\bin\x64\Debug\net8.0\Amethyst.Contract.dll</HintPath>
-    </Reference>
   </ItemGroup>
 </Project>
