--- a/plugin_Kinect360NiTE/plugin_Kinect360NiTE.csproj
+++ b/plugin_Kinect360NiTE/plugin_Kinect360NiTE.csproj
@@ -22,6 +22,9 @@
     <Content Include="Assets\**">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Strings\**">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
